Updated time series

--- a/TimeSeries.ipynb
+++ b/TimeSeries.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "              dtype='datetime64[ns]', freq='S')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
        "              dtype='datetime64[ns]', freq='H')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -115,15 +115,15 @@
     {
      "data": {
       "text/plain": [
-       "2011-01-01 00:00:00    163\n",
-       "2011-01-01 01:00:00    388\n",
-       "2011-01-01 02:00:00    353\n",
-       "2011-01-01 03:00:00    387\n",
-       "2011-01-01 04:00:00    450\n",
+       "2011-01-01 00:00:00    325\n",
+       "2011-01-01 01:00:00    152\n",
+       "2011-01-01 02:00:00    367\n",
+       "2011-01-01 03:00:00     74\n",
+       "2011-01-01 04:00:00     13\n",
        "Freq: H, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "2011-01-01 00:00:00    163\n",
+       "2011-01-01 00:00:00    325\n",
        "2011-01-01 00:05:00    NaN\n",
        "2011-01-01 00:10:00    NaN\n",
        "2011-01-01 00:15:00    NaN\n",
@@ -163,65 +163,19 @@
        "2011-01-01 00:45:00    NaN\n",
        "2011-01-01 00:50:00    NaN\n",
        "2011-01-01 00:55:00    NaN\n",
-       "2011-01-01 01:00:00    388\n",
+       "2011-01-01 01:00:00    152\n",
        "2011-01-01 01:05:00    NaN\n",
        "2011-01-01 01:10:00    NaN\n",
-       "2011-01-01 01:15:00    NaN\n",
-       "2011-01-01 01:20:00    NaN\n",
-       "2011-01-01 01:25:00    NaN\n",
-       "2011-01-01 01:30:00    NaN\n",
-       "2011-01-01 01:35:00    NaN\n",
-       "2011-01-01 01:40:00    NaN\n",
-       "2011-01-01 01:45:00    NaN\n",
-       "2011-01-01 01:50:00    NaN\n",
-       "2011-01-01 01:55:00    NaN\n",
-       "2011-01-01 02:00:00    353\n",
-       "2011-01-01 02:05:00    NaN\n",
-       "2011-01-01 02:10:00    NaN\n",
-       "2011-01-01 02:15:00    NaN\n",
-       "2011-01-01 02:20:00    NaN\n",
-       "2011-01-01 02:25:00    NaN\n",
-       "                      ... \n",
-       "2011-01-03 20:35:00    NaN\n",
-       "2011-01-03 20:40:00    NaN\n",
-       "2011-01-03 20:45:00    NaN\n",
-       "2011-01-03 20:50:00    NaN\n",
-       "2011-01-03 20:55:00    NaN\n",
-       "2011-01-03 21:00:00    448\n",
-       "2011-01-03 21:05:00    NaN\n",
-       "2011-01-03 21:10:00    NaN\n",
-       "2011-01-03 21:15:00    NaN\n",
-       "2011-01-03 21:20:00    NaN\n",
-       "2011-01-03 21:25:00    NaN\n",
-       "2011-01-03 21:30:00    NaN\n",
-       "2011-01-03 21:35:00    NaN\n",
-       "2011-01-03 21:40:00    NaN\n",
-       "2011-01-03 21:45:00    NaN\n",
-       "2011-01-03 21:50:00    NaN\n",
-       "2011-01-03 21:55:00    NaN\n",
-       "2011-01-03 22:00:00    254\n",
-       "2011-01-03 22:05:00    NaN\n",
-       "2011-01-03 22:10:00    NaN\n",
-       "2011-01-03 22:15:00    NaN\n",
-       "2011-01-03 22:20:00    NaN\n",
-       "2011-01-03 22:25:00    NaN\n",
-       "2011-01-03 22:30:00    NaN\n",
-       "2011-01-03 22:35:00    NaN\n",
-       "2011-01-03 22:40:00    NaN\n",
-       "2011-01-03 22:45:00    NaN\n",
-       "2011-01-03 22:50:00    NaN\n",
-       "2011-01-03 22:55:00    NaN\n",
-       "2011-01-03 23:00:00    480\n",
        "Freq: 5T, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ts.resample('5Min', how='sum')"
+    "ts.resample('5Min', how='sum').head(15)"
    ]
   },
   {
@@ -471,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -557,7 +511,7 @@
        "9  2014-05-04 18:47:05.486877             41"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -591,7 +545,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,13 +558,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert string to datetime\n",
+    "# Convert string to datetime\n",
     "This is very simple to do, if you know the function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -696,7 +650,7 @@
        "9 2014-05-04 18:47:05.486877             41"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,8 +688,390 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how the date field type changed from object to datetime64[ns]. This was just what we were looking for.\n",
-    "\n",
+    "Notice how the date field type changed from object to datetime64[ns]. This was just what we were looking for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Converting datetime to string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df['date'] = df.date.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date             object\n",
+       "battle_deaths     int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now we are back..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting datetime into two new columns\n",
+    "In this example we have datetime format strings in the dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>battle_deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-05-01 18:47:05.069722</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-05-01 18:47:05.119994</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-05-02 18:47:05.178768</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-05-02 18:47:05.230071</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-05-02 18:47:05.230071</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014-05-02 18:47:05.280592</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2014-05-03 18:47:05.332662</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2014-05-03 18:47:05.385109</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2014-05-04 18:47:05.436523</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2014-05-04 18:47:05.486877</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         date  battle_deaths\n",
+       "0  2014-05-01 18:47:05.069722             34\n",
+       "1  2014-05-01 18:47:05.119994             25\n",
+       "2  2014-05-02 18:47:05.178768             26\n",
+       "3  2014-05-02 18:47:05.230071             15\n",
+       "4  2014-05-02 18:47:05.230071             15\n",
+       "5  2014-05-02 18:47:05.280592             14\n",
+       "6  2014-05-03 18:47:05.332662             26\n",
+       "7  2014-05-03 18:47:05.385109             25\n",
+       "8  2014-05-04 18:47:05.436523             62\n",
+       "9  2014-05-04 18:47:05.486877             41"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'date': ['2014-05-01 18:47:05.069722', '2014-05-01 18:47:05.119994', '2014-05-02 18:47:05.178768', '2014-05-02 18:47:05.230071', '2014-05-02 18:47:05.230071', '2014-05-02 18:47:05.280592', '2014-05-03 18:47:05.332662', '2014-05-03 18:47:05.385109', '2014-05-04 18:47:05.436523', '2014-05-04 18:47:05.486877'],\n",
+    "        'battle_deaths': [34, 25, 26, 15, 15, 14, 26, 25, 62, 41]}\n",
+    "df = pd.DataFrame(data, columns = ['date', 'battle_deaths'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We use that to produce a new DataFrame with the datepart and the timepart in separate columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datepart</th>\n",
+       "      <th>timepart</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-05-01</td>\n",
+       "      <td>18:47:05.069722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-05-01</td>\n",
+       "      <td>18:47:05.119994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-05-02</td>\n",
+       "      <td>18:47:05.178768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-05-02</td>\n",
+       "      <td>18:47:05.230071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-05-02</td>\n",
+       "      <td>18:47:05.230071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014-05-02</td>\n",
+       "      <td>18:47:05.280592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2014-05-03</td>\n",
+       "      <td>18:47:05.332662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2014-05-03</td>\n",
+       "      <td>18:47:05.385109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2014-05-04</td>\n",
+       "      <td>18:47:05.436523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2014-05-04</td>\n",
+       "      <td>18:47:05.486877</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     datepart         timepart\n",
+       "0  2014-05-01  18:47:05.069722\n",
+       "1  2014-05-01  18:47:05.119994\n",
+       "2  2014-05-02  18:47:05.178768\n",
+       "3  2014-05-02  18:47:05.230071\n",
+       "4  2014-05-02  18:47:05.230071\n",
+       "5  2014-05-02  18:47:05.280592\n",
+       "6  2014-05-03  18:47:05.332662\n",
+       "7  2014-05-03  18:47:05.385109\n",
+       "8  2014-05-04  18:47:05.436523\n",
+       "9  2014-05-04  18:47:05.486877"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(df.date.str.split(' ').tolist(), columns = \"datepart timepart\".split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keeping only time as new column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>battle_deaths</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-05-01 18:47:05.069722</td>\n",
+       "      <td>34</td>\n",
+       "      <td>18:47:05.069722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-05-01 18:47:05.119994</td>\n",
+       "      <td>25</td>\n",
+       "      <td>18:47:05.119994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-05-02 18:47:05.178768</td>\n",
+       "      <td>26</td>\n",
+       "      <td>18:47:05.178768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-05-02 18:47:05.230071</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18:47:05.230071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-05-02 18:47:05.230071</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18:47:05.230071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014-05-02 18:47:05.280592</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18:47:05.280592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2014-05-03 18:47:05.332662</td>\n",
+       "      <td>26</td>\n",
+       "      <td>18:47:05.332662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2014-05-03 18:47:05.385109</td>\n",
+       "      <td>25</td>\n",
+       "      <td>18:47:05.385109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2014-05-04 18:47:05.436523</td>\n",
+       "      <td>62</td>\n",
+       "      <td>18:47:05.436523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2014-05-04 18:47:05.486877</td>\n",
+       "      <td>41</td>\n",
+       "      <td>18:47:05.486877</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         date  battle_deaths             time\n",
+       "0  2014-05-01 18:47:05.069722             34  18:47:05.069722\n",
+       "1  2014-05-01 18:47:05.119994             25  18:47:05.119994\n",
+       "2  2014-05-02 18:47:05.178768             26  18:47:05.178768\n",
+       "3  2014-05-02 18:47:05.230071             15  18:47:05.230071\n",
+       "4  2014-05-02 18:47:05.230071             15  18:47:05.230071\n",
+       "5  2014-05-02 18:47:05.280592             14  18:47:05.280592\n",
+       "6  2014-05-03 18:47:05.332662             26  18:47:05.332662\n",
+       "7  2014-05-03 18:47:05.385109             25  18:47:05.385109\n",
+       "8  2014-05-04 18:47:05.436523             62  18:47:05.436523\n",
+       "9  2014-05-04 18:47:05.486877             41  18:47:05.486877"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time']=pd.DataFrame(df.date.str.split(' ').tolist(), columns = \"date time\".split())['time'].values\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Set date series as index\n",
     "There is a couple of ways to accomplish that. Christ writes in his notes that you should do like this\n",
     "\n",
